<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/search"
        android:orderInCategory="50"
        android:icon="@drawable/search"
        app:showAsAction="always"
        android:title="@string/backLog"/>

    <item android:id="@+id/favorites"
        android:icon="@drawable/favorite"
        android:orderInCategory="75"
        app:showAsAction="always"
        android:title="@string/backChat"/>

    <item android:id="@+id/article"
        android:title="@string/article"
        android:icon="@drawable/article"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"
        android:orderInCategory="400"/>

</menu>